force-app/main/default/objects/Switching_Event__e/Switching_Event__e.object-meta.xml
<CustomObject>
    <label>Switching Event</label>
    <pluralLabel>Switching Events</pluralLabel>
</CustomObject>