force-app/main/default/objects/Switching_Event__e/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <label>Process Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>