force-app/main/default/objects/Switching_Event__e/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>