force-app/main/default/objects/Switching_Event__e/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <label>Request ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 