force-app/main/default/objects/Switching_Event__e/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <type>Text</type>
    <label>Response Status</label>
    <length>255</length>
</CustomField> 